# rs-avro2csv

./: Cargo.toml  README.md  bench.md  rs-avro2csv  rs-avro2csv.wasm  run.sh
sample.d/: input.avro  input.avsc  sample.jsonl
src/: main.rs  val.rs
