[package]
name = "rs-avro2csv"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.apache-avro]
version = "0.17.0"
default-features = false
features = [
]

[dependencies.uuid]
version = "1.11.0"
default-features = false
features = [
	"std",
]

[dependencies.serde]
version = "1.0.217"
default-features = false
features = [
	"std",
]

[dependencies.csv]
version = "1.3.1"
default-features = false
features = [
]
